firefox location overflow fix

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -193,7 +193,7 @@ select {
   color: #2e3d4d !important;
   cursor: pointer;
   max-height: 250px;
-  overflow: overlay;
+  overflow: auto;
 }
 .location-dp:after {
   content: '';
